fix: Prevent horizontal scrolling on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     scrollbar-gutter: stable both-edges;
     background-color: var(--lcc-color--app-mainBackground);
 
